PRECiSA/Alex_Happy/PVS/ParRawPVSLang.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParRawPVSLang.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Integer -> L_integ                                 (1)
	Double -> L_doubl                                  (2)
	Id -> L_Id                                         (3)
	ListId -> Id                                       (4)
	ListId -> Id ',' ListId                            (5)
	ElsIf -> 'ELSIF' Expr 'THEN' Expr                  (6)
	ListElsIf -> ElsIf                                 (7)
	ListElsIf -> ElsIf ListElsIf                       (8)
	ListExpr -> Expr                                   (9)
	ListExpr -> Expr ',' ListExpr                      (10)
	Expr -> Expr1                                      (11)
	Expr -> 'LET' Id ':' Type '=' Expr 'IN' Expr       (12)
	Expr -> 'LET' Id '=' Expr 'IN' Expr                (13)
	Expr1 -> Expr2                                     (14)
	Expr1 -> Expr1 'OR' Expr2                          (15)
	Expr2 -> Expr3                                     (16)
	Expr2 -> Expr2 'AND' Expr3                         (17)
	Expr3 -> Expr4                                     (18)
	Expr3 -> 'NOT' Expr4                               (19)
	Expr4 -> Expr5                                     (20)
	Expr4 -> Expr5 '=' Expr5                           (21)
	Expr4 -> Expr5 '/=' Expr5                          (22)
	Expr4 -> Expr5 '<' Expr5                           (23)
	Expr4 -> Expr5 '<=' Expr5                          (24)
	Expr4 -> Expr5 '>' Expr5                           (25)
	Expr4 -> Expr5 '>=' Expr5                          (26)
	Expr5 -> Expr6                                     (27)
	Expr5 -> Expr5 '+' Expr6                           (28)
	Expr5 -> Expr5 '-' Expr6                           (29)
	Expr6 -> Expr7                                     (30)
	Expr6 -> Expr6 '*' Expr7                           (31)
	Expr6 -> Expr6 '/' Expr7                           (32)
	Expr7 -> Expr8                                     (33)
	Expr7 -> '-' Expr8                                 (34)
	Expr8 -> Expr9                                     (35)
	Expr8 -> Expr9 '^' Expr8                           (36)
	Expr9 -> Expr10                                    (37)
	Expr9 -> 'IF' Expr 'THEN' Expr 'ELSE' Expr 'ENDIF'   (38)
	Expr9 -> 'IF' Expr 'THEN' Expr ListElsIf 'ELSE' Expr 'ENDIF'   (39)
	Expr9 -> 'for' '(' Integer ',' Integer ',' Expr ',' Id ')'   (40)
	Expr10 -> Expr11                                   (41)
	Expr10 -> Id '(' ListExpr ')'                      (42)
	Expr10 -> Id                                       (43)
	Expr10 -> Integer                                  (44)
	Expr10 -> Double                                   (45)
	Expr11 -> '(' Expr ')'                             (46)
	Type -> 'bool'                                     (47)
	Type -> 'int'                                      (48)
	Type -> 'integer'                                  (49)
	Type -> 'unb_single'                               (50)
	Type -> 'unb_double'                               (51)
	Type -> 'unb_pos_single'                           (52)
	Type -> 'unb_pos_double'                           (53)
	Type -> 'unb_nz_single'                            (54)
	Type -> 'unb_nz_double'                            (55)
	Subrange -> 'subrange' '(' Integer ',' Integer ')'   (56)
	ListArg -> Arg                                     (57)
	ListArg -> Arg ',' ListArg                         (58)
	Arg -> ListId ':' Type                             (59)
	Arg -> ListId ':' Subrange                         (60)
	Arg -> ListId ':' Type '|' Expr                    (61)
	Args -> ListArg                                    (62)
	Args -> ListId                                     (63)
	ListDecl -> Decl                                   (64)
	ListDecl -> Decl ListDecl                          (65)
	Decl -> Id '(' Args ')' ':' Type '=' Expr          (66)
	Decl -> Id ':' Type '=' Expr                       (67)
	Imp -> 'IMPORTING' ListId                          (68)
	VarDecl -> Id ':' 'VAR' Type                       (69)
	ListVarDecl ->                                     (70)
	ListVarDecl -> ListVarDecl VarDecl                 (71)
	Program -> Id ':' 'THEORY' 'BEGIN' Imp ListVarDecl ListDecl 'END' Id   (72)
	Program -> Id ':' 'THEORY' 'BEGIN' ListVarDecl ListDecl 'END' Id   (73)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'*'            { PT _ (TS _ 3) }
	'+'            { PT _ (TS _ 4) }
	','            { PT _ (TS _ 5) }
	'-'            { PT _ (TS _ 6) }
	'/'            { PT _ (TS _ 7) }
	'/='           { PT _ (TS _ 8) }
	':'            { PT _ (TS _ 9) }
	'<'            { PT _ (TS _ 10) }
	'<='           { PT _ (TS _ 11) }
	'='            { PT _ (TS _ 12) }
	'>'            { PT _ (TS _ 13) }
	'>='           { PT _ (TS _ 14) }
	'AND'          { PT _ (TS _ 15) }
	'BEGIN'        { PT _ (TS _ 16) }
	'ELSE'         { PT _ (TS _ 17) }
	'ELSIF'        { PT _ (TS _ 18) }
	'END'          { PT _ (TS _ 19) }
	'ENDIF'        { PT _ (TS _ 20) }
	'IF'           { PT _ (TS _ 21) }
	'IMPORTING'    { PT _ (TS _ 22) }
	'IN'           { PT _ (TS _ 23) }
	'LET'          { PT _ (TS _ 24) }
	'NOT'          { PT _ (TS _ 25) }
	'OR'           { PT _ (TS _ 26) }
	'THEN'         { PT _ (TS _ 27) }
	'THEORY'       { PT _ (TS _ 28) }
	'VAR'          { PT _ (TS _ 29) }
	'^'            { PT _ (TS _ 30) }
	'bool'         { PT _ (TS _ 31) }
	'for'          { PT _ (TS _ 32) }
	'int'          { PT _ (TS _ 33) }
	'integer'      { PT _ (TS _ 34) }
	'subrange'     { PT _ (TS _ 35) }
	'unb_double'   { PT _ (TS _ 36) }
	'unb_nz_double'{ PT _ (TS _ 37) }
	'unb_nz_single'{ PT _ (TS _ 38) }
	'unb_pos_double'{ PT _ (TS _ 39) }
	'unb_pos_single'{ PT _ (TS _ 40) }
	'unb_single'   { PT _ (TS _ 41) }
	'|'            { PT _ (TS _ 42) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Integer         rule  1
	Double          rule  2
	Id              rule  3
	ListId          rules 4, 5
	ElsIf           rule  6
	ListElsIf       rules 7, 8
	ListExpr        rules 9, 10
	Expr            rules 11, 12, 13
	Expr1           rules 14, 15
	Expr2           rules 16, 17
	Expr3           rules 18, 19
	Expr4           rules 20, 21, 22, 23, 24, 25, 26
	Expr5           rules 27, 28, 29
	Expr6           rules 30, 31, 32
	Expr7           rules 33, 34
	Expr8           rules 35, 36
	Expr9           rules 37, 38, 39, 40
	Expr10          rules 41, 42, 43, 44, 45
	Expr11          rule  46
	Type            rules 47, 48, 49, 50, 51, 52, 53, 54, 55
	Subrange        rule  56
	ListArg         rules 57, 58
	Arg             rules 59, 60, 61
	Args            rules 62, 63
	ListDecl        rules 64, 65
	Decl            rules 66, 67
	Imp             rule  68
	VarDecl         rule  69
	ListVarDecl     rules 70, 71
	Program         rules 72, 73

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	L_Id           shift, and enter state 5

	Id             goto state 3
	Program        goto state 4

State 1


	L_integ        shift, and enter state 2


State 2

	Integer -> L_integ .                                (rule 1)

	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'/'            reduce using rule 1
	'/='           reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'AND'          reduce using rule 1
	'ELSE'         reduce using rule 1
	'ELSIF'        reduce using rule 1
	'END'          reduce using rule 1
	'ENDIF'        reduce using rule 1
	'IN'           reduce using rule 1
	'OR'           reduce using rule 1
	'THEN'         reduce using rule 1
	'^'            reduce using rule 1
	L_Id           reduce using rule 1


State 3

	Program -> Id . ':' 'THEORY' 'BEGIN' Imp ListVarDecl ListDecl 'END' Id    (rule 72)
	Program -> Id . ':' 'THEORY' 'BEGIN' ListVarDecl ListDecl 'END' Id    (rule 73)

	':'            shift, and enter state 6


State 4

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 5

	Id -> L_Id .                                        (rule 3)

	'('            reduce using rule 3
	')'            reduce using rule 3
	'*'            reduce using rule 3
	'+'            reduce using rule 3
	','            reduce using rule 3
	'-'            reduce using rule 3
	'/'            reduce using rule 3
	'/='           reduce using rule 3
	':'            reduce using rule 3
	'<'            reduce using rule 3
	'<='           reduce using rule 3
	'='            reduce using rule 3
	'>'            reduce using rule 3
	'>='           reduce using rule 3
	'AND'          reduce using rule 3
	'ELSE'         reduce using rule 3
	'ELSIF'        reduce using rule 3
	'END'          reduce using rule 3
	'ENDIF'        reduce using rule 3
	'IN'           reduce using rule 3
	'OR'           reduce using rule 3
	'THEN'         reduce using rule 3
	'^'            reduce using rule 3
	L_Id           reduce using rule 3
	%eof           reduce using rule 3


State 6

	Program -> Id ':' . 'THEORY' 'BEGIN' Imp ListVarDecl ListDecl 'END' Id    (rule 72)
	Program -> Id ':' . 'THEORY' 'BEGIN' ListVarDecl ListDecl 'END' Id    (rule 73)

	'THEORY'       shift, and enter state 7


State 7

	Program -> Id ':' 'THEORY' . 'BEGIN' Imp ListVarDecl ListDecl 'END' Id    (rule 72)
	Program -> Id ':' 'THEORY' . 'BEGIN' ListVarDecl ListDecl 'END' Id    (rule 73)

	'BEGIN'        shift, and enter state 8


State 8

	Program -> Id ':' 'THEORY' 'BEGIN' . Imp ListVarDecl ListDecl 'END' Id    (rule 72)
	Program -> Id ':' 'THEORY' 'BEGIN' . ListVarDecl ListDecl 'END' Id    (rule 73)

	'IMPORTING'    shift, and enter state 11
	L_Id           reduce using rule 70

	Imp            goto state 9
	ListVarDecl    goto state 10

State 9

	Program -> Id ':' 'THEORY' 'BEGIN' Imp . ListVarDecl ListDecl 'END' Id    (rule 72)

	L_Id           reduce using rule 70

	ListVarDecl    goto state 18

State 10

	ListVarDecl -> ListVarDecl . VarDecl                (rule 71)
	Program -> Id ':' 'THEORY' 'BEGIN' ListVarDecl . ListDecl 'END' Id    (rule 73)

	L_Id           shift, and enter state 5

	Id             goto state 14
	ListDecl       goto state 15
	Decl           goto state 16
	VarDecl        goto state 17

State 11

	Imp -> 'IMPORTING' . ListId                         (rule 68)

	L_Id           shift, and enter state 5

	Id             goto state 12
	ListId         goto state 13

State 12

	ListId -> Id .                                      (rule 4)
	ListId -> Id . ',' ListId                           (rule 5)

	')'            reduce using rule 4
	','            shift, and enter state 25
	':'            reduce using rule 4
	L_Id           reduce using rule 4


State 13

	Imp -> 'IMPORTING' ListId .                         (rule 68)

	L_Id           reduce using rule 68


State 14

	Decl -> Id . '(' Args ')' ':' Type '=' Expr         (rule 66)
	Decl -> Id . ':' Type '=' Expr                      (rule 67)
	VarDecl -> Id . ':' 'VAR' Type                      (rule 69)

	'('            shift, and enter state 23
	':'            shift, and enter state 24


State 15

	Program -> Id ':' 'THEORY' 'BEGIN' ListVarDecl ListDecl . 'END' Id    (rule 73)

	'END'          shift, and enter state 22


State 16

	ListDecl -> Decl .                                  (rule 64)
	ListDecl -> Decl . ListDecl                         (rule 65)

	'END'          reduce using rule 64
	L_Id           shift, and enter state 5

	Id             goto state 20
	ListDecl       goto state 21
	Decl           goto state 16

State 17

	ListVarDecl -> ListVarDecl VarDecl .                (rule 71)

	L_Id           reduce using rule 71


State 18

	ListVarDecl -> ListVarDecl . VarDecl                (rule 71)
	Program -> Id ':' 'THEORY' 'BEGIN' Imp ListVarDecl . ListDecl 'END' Id    (rule 72)

	L_Id           shift, and enter state 5

	Id             goto state 14
	ListDecl       goto state 19
	Decl           goto state 16
	VarDecl        goto state 17

State 19

	Program -> Id ':' 'THEORY' 'BEGIN' Imp ListVarDecl ListDecl . 'END' Id    (rule 72)

	'END'          shift, and enter state 44


State 20

	Decl -> Id . '(' Args ')' ':' Type '=' Expr         (rule 66)
	Decl -> Id . ':' Type '=' Expr                      (rule 67)

	'('            shift, and enter state 23
	':'            shift, and enter state 43


State 21

	ListDecl -> Decl ListDecl .                         (rule 65)

	'END'          reduce using rule 65


State 22

	Program -> Id ':' 'THEORY' 'BEGIN' ListVarDecl ListDecl 'END' . Id    (rule 73)

	L_Id           shift, and enter state 5

	Id             goto state 42

State 23

	Decl -> Id '(' . Args ')' ':' Type '=' Expr         (rule 66)

	L_Id           shift, and enter state 5

	Id             goto state 12
	ListId         goto state 38
	ListArg        goto state 39
	Arg            goto state 40
	Args           goto state 41

State 24

	Decl -> Id ':' . Type '=' Expr                      (rule 67)
	VarDecl -> Id ':' . 'VAR' Type                      (rule 69)

	'VAR'          shift, and enter state 28
	'bool'         shift, and enter state 29
	'int'          shift, and enter state 30
	'integer'      shift, and enter state 31
	'unb_double'   shift, and enter state 32
	'unb_nz_double'shift, and enter state 33
	'unb_nz_single'shift, and enter state 34
	'unb_pos_double'shift, and enter state 35
	'unb_pos_single'shift, and enter state 36
	'unb_single'   shift, and enter state 37

	Type           goto state 27

State 25

	ListId -> Id ',' . ListId                           (rule 5)

	L_Id           shift, and enter state 5

	Id             goto state 12
	ListId         goto state 26

State 26

	ListId -> Id ',' ListId .                           (rule 5)

	')'            reduce using rule 5
	':'            reduce using rule 5
	L_Id           reduce using rule 5


State 27

	Decl -> Id ':' Type . '=' Expr                      (rule 67)

	'='            shift, and enter state 50


State 28

	VarDecl -> Id ':' 'VAR' . Type                      (rule 69)

	'bool'         shift, and enter state 29
	'int'          shift, and enter state 30
	'integer'      shift, and enter state 31
	'unb_double'   shift, and enter state 32
	'unb_nz_double'shift, and enter state 33
	'unb_nz_single'shift, and enter state 34
	'unb_pos_double'shift, and enter state 35
	'unb_pos_single'shift, and enter state 36
	'unb_single'   shift, and enter state 37

	Type           goto state 49

State 29

	Type -> 'bool' .                                    (rule 47)

	')'            reduce using rule 47
	','            reduce using rule 47
	'='            reduce using rule 47
	'|'            reduce using rule 47
	L_Id           reduce using rule 47


State 30

	Type -> 'int' .                                     (rule 48)

	')'            reduce using rule 48
	','            reduce using rule 48
	'='            reduce using rule 48
	'|'            reduce using rule 48
	L_Id           reduce using rule 48


State 31

	Type -> 'integer' .                                 (rule 49)

	')'            reduce using rule 49
	','            reduce using rule 49
	'='            reduce using rule 49
	'|'            reduce using rule 49
	L_Id           reduce using rule 49


State 32

	Type -> 'unb_double' .                              (rule 51)

	')'            reduce using rule 51
	','            reduce using rule 51
	'='            reduce using rule 51
	'|'            reduce using rule 51
	L_Id           reduce using rule 51


State 33

	Type -> 'unb_nz_double' .                           (rule 55)

	')'            reduce using rule 55
	','            reduce using rule 55
	'='            reduce using rule 55
	'|'            reduce using rule 55
	L_Id           reduce using rule 55


State 34

	Type -> 'unb_nz_single' .                           (rule 54)

	')'            reduce using rule 54
	','            reduce using rule 54
	'='            reduce using rule 54
	'|'            reduce using rule 54
	L_Id           reduce using rule 54


State 35

	Type -> 'unb_pos_double' .                          (rule 53)

	')'            reduce using rule 53
	','            reduce using rule 53
	'='            reduce using rule 53
	'|'            reduce using rule 53
	L_Id           reduce using rule 53


State 36

	Type -> 'unb_pos_single' .                          (rule 52)

	')'            reduce using rule 52
	','            reduce using rule 52
	'='            reduce using rule 52
	'|'            reduce using rule 52
	L_Id           reduce using rule 52


State 37

	Type -> 'unb_single' .                              (rule 50)

	')'            reduce using rule 50
	','            reduce using rule 50
	'='            reduce using rule 50
	'|'            reduce using rule 50
	L_Id           reduce using rule 50


State 38

	Arg -> ListId . ':' Type                            (rule 59)
	Arg -> ListId . ':' Subrange                        (rule 60)
	Arg -> ListId . ':' Type '|' Expr                   (rule 61)
	Args -> ListId .                                    (rule 63)

	')'            reduce using rule 63
	':'            shift, and enter state 48


State 39

	Args -> ListArg .                                   (rule 62)

	')'            reduce using rule 62


State 40

	ListArg -> Arg .                                    (rule 57)
	ListArg -> Arg . ',' ListArg                        (rule 58)

	')'            reduce using rule 57
	','            shift, and enter state 47


State 41

	Decl -> Id '(' Args . ')' ':' Type '=' Expr         (rule 66)

	')'            shift, and enter state 46


State 42

	Program -> Id ':' 'THEORY' 'BEGIN' ListVarDecl ListDecl 'END' Id .    (rule 73)

	%eof           reduce using rule 73


State 43

	Decl -> Id ':' . Type '=' Expr                      (rule 67)

	'bool'         shift, and enter state 29
	'int'          shift, and enter state 30
	'integer'      shift, and enter state 31
	'unb_double'   shift, and enter state 32
	'unb_nz_double'shift, and enter state 33
	'unb_nz_single'shift, and enter state 34
	'unb_pos_double'shift, and enter state 35
	'unb_pos_single'shift, and enter state 36
	'unb_single'   shift, and enter state 37

	Type           goto state 27

State 44

	Program -> Id ':' 'THEORY' 'BEGIN' Imp ListVarDecl ListDecl 'END' . Id    (rule 72)

	L_Id           shift, and enter state 5

	Id             goto state 45

State 45

	Program -> Id ':' 'THEORY' 'BEGIN' Imp ListVarDecl ListDecl 'END' Id .    (rule 72)

	%eof           reduce using rule 72


State 46

	Decl -> Id '(' Args ')' . ':' Type '=' Expr         (rule 66)

	':'            shift, and enter state 78


State 47

	ListArg -> Arg ',' . ListArg                        (rule 58)

	L_Id           shift, and enter state 5

	Id             goto state 12
	ListId         goto state 76
	ListArg        goto state 77
	Arg            goto state 40

State 48

	Arg -> ListId ':' . Type                            (rule 59)
	Arg -> ListId ':' . Subrange                        (rule 60)
	Arg -> ListId ':' . Type '|' Expr                   (rule 61)

	'bool'         shift, and enter state 29
	'int'          shift, and enter state 30
	'integer'      shift, and enter state 31
	'subrange'     shift, and enter state 75
	'unb_double'   shift, and enter state 32
	'unb_nz_double'shift, and enter state 33
	'unb_nz_single'shift, and enter state 34
	'unb_pos_double'shift, and enter state 35
	'unb_pos_single'shift, and enter state 36
	'unb_single'   shift, and enter state 37

	Type           goto state 73
	Subrange       goto state 74

State 49

	VarDecl -> Id ':' 'VAR' Type .                      (rule 69)

	L_Id           reduce using rule 69


State 50

	Decl -> Id ':' Type '=' . Expr                      (rule 67)

	'('            shift, and enter state 66
	'-'            shift, and enter state 67
	'IF'           shift, and enter state 68
	'LET'          shift, and enter state 69
	'NOT'          shift, and enter state 70
	'for'          shift, and enter state 71
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 5

	Integer        goto state 51
	Double         goto state 52
	Id             goto state 53
	Expr           goto state 54
	Expr1          goto state 55
	Expr2          goto state 56
	Expr3          goto state 57
	Expr4          goto state 58
	Expr5          goto state 59
	Expr6          goto state 60
	Expr7          goto state 61
	Expr8          goto state 62
	Expr9          goto state 63
	Expr10         goto state 64
	Expr11         goto state 65

State 51

	Expr10 -> Integer .                                 (rule 44)

	')'            reduce using rule 44
	'*'            reduce using rule 44
	'+'            reduce using rule 44
	','            reduce using rule 44
	'-'            reduce using rule 44
	'/'            reduce using rule 44
	'/='           reduce using rule 44
	'<'            reduce using rule 44
	'<='           reduce using rule 44
	'='            reduce using rule 44
	'>'            reduce using rule 44
	'>='           reduce using rule 44
	'AND'          reduce using rule 44
	'ELSE'         reduce using rule 44
	'ELSIF'        reduce using rule 44
	'END'          reduce using rule 44
	'ENDIF'        reduce using rule 44
	'IN'           reduce using rule 44
	'OR'           reduce using rule 44
	'THEN'         reduce using rule 44
	'^'            reduce using rule 44
	L_Id           reduce using rule 44


State 52

	Expr10 -> Double .                                  (rule 45)

	')'            reduce using rule 45
	'*'            reduce using rule 45
	'+'            reduce using rule 45
	','            reduce using rule 45
	'-'            reduce using rule 45
	'/'            reduce using rule 45
	'/='           reduce using rule 45
	'<'            reduce using rule 45
	'<='           reduce using rule 45
	'='            reduce using rule 45
	'>'            reduce using rule 45
	'>='           reduce using rule 45
	'AND'          reduce using rule 45
	'ELSE'         reduce using rule 45
	'ELSIF'        reduce using rule 45
	'END'          reduce using rule 45
	'ENDIF'        reduce using rule 45
	'IN'           reduce using rule 45
	'OR'           reduce using rule 45
	'THEN'         reduce using rule 45
	'^'            reduce using rule 45
	L_Id           reduce using rule 45


State 53

	Expr10 -> Id . '(' ListExpr ')'                     (rule 42)
	Expr10 -> Id .                                      (rule 43)

	'('            shift, and enter state 101
	')'            reduce using rule 43
	'*'            reduce using rule 43
	'+'            reduce using rule 43
	','            reduce using rule 43
	'-'            reduce using rule 43
	'/'            reduce using rule 43
	'/='           reduce using rule 43
	'<'            reduce using rule 43
	'<='           reduce using rule 43
	'='            reduce using rule 43
	'>'            reduce using rule 43
	'>='           reduce using rule 43
	'AND'          reduce using rule 43
	'ELSE'         reduce using rule 43
	'ELSIF'        reduce using rule 43
	'END'          reduce using rule 43
	'ENDIF'        reduce using rule 43
	'IN'           reduce using rule 43
	'OR'           reduce using rule 43
	'THEN'         reduce using rule 43
	'^'            reduce using rule 43
	L_Id           reduce using rule 43


State 54

	Decl -> Id ':' Type '=' Expr .                      (rule 67)

	'END'          reduce using rule 67
	L_Id           reduce using rule 67


State 55

	Expr -> Expr1 .                                     (rule 11)
	Expr1 -> Expr1 . 'OR' Expr2                         (rule 15)

	')'            reduce using rule 11
	','            reduce using rule 11
	'ELSE'         reduce using rule 11
	'ELSIF'        reduce using rule 11
	'END'          reduce using rule 11
	'ENDIF'        reduce using rule 11
	'IN'           reduce using rule 11
	'OR'           shift, and enter state 100
	'THEN'         reduce using rule 11
	L_Id           reduce using rule 11


State 56

	Expr1 -> Expr2 .                                    (rule 14)
	Expr2 -> Expr2 . 'AND' Expr3                        (rule 17)

	')'            reduce using rule 14
	','            reduce using rule 14
	'AND'          shift, and enter state 99
	'ELSE'         reduce using rule 14
	'ELSIF'        reduce using rule 14
	'END'          reduce using rule 14
	'ENDIF'        reduce using rule 14
	'IN'           reduce using rule 14
	'OR'           reduce using rule 14
	'THEN'         reduce using rule 14
	L_Id           reduce using rule 14


State 57

	Expr2 -> Expr3 .                                    (rule 16)

	')'            reduce using rule 16
	','            reduce using rule 16
	'AND'          reduce using rule 16
	'ELSE'         reduce using rule 16
	'ELSIF'        reduce using rule 16
	'END'          reduce using rule 16
	'ENDIF'        reduce using rule 16
	'IN'           reduce using rule 16
	'OR'           reduce using rule 16
	'THEN'         reduce using rule 16
	L_Id           reduce using rule 16


State 58

	Expr3 -> Expr4 .                                    (rule 18)

	')'            reduce using rule 18
	','            reduce using rule 18
	'AND'          reduce using rule 18
	'ELSE'         reduce using rule 18
	'ELSIF'        reduce using rule 18
	'END'          reduce using rule 18
	'ENDIF'        reduce using rule 18
	'IN'           reduce using rule 18
	'OR'           reduce using rule 18
	'THEN'         reduce using rule 18
	L_Id           reduce using rule 18


State 59

	Expr4 -> Expr5 .                                    (rule 20)
	Expr4 -> Expr5 . '=' Expr5                          (rule 21)
	Expr4 -> Expr5 . '/=' Expr5                         (rule 22)
	Expr4 -> Expr5 . '<' Expr5                          (rule 23)
	Expr4 -> Expr5 . '<=' Expr5                         (rule 24)
	Expr4 -> Expr5 . '>' Expr5                          (rule 25)
	Expr4 -> Expr5 . '>=' Expr5                         (rule 26)
	Expr5 -> Expr5 . '+' Expr6                          (rule 28)
	Expr5 -> Expr5 . '-' Expr6                          (rule 29)

	')'            reduce using rule 20
	'+'            shift, and enter state 91
	','            reduce using rule 20
	'-'            shift, and enter state 92
	'/='           shift, and enter state 93
	'<'            shift, and enter state 94
	'<='           shift, and enter state 95
	'='            shift, and enter state 96
	'>'            shift, and enter state 97
	'>='           shift, and enter state 98
	'AND'          reduce using rule 20
	'ELSE'         reduce using rule 20
	'ELSIF'        reduce using rule 20
	'END'          reduce using rule 20
	'ENDIF'        reduce using rule 20
	'IN'           reduce using rule 20
	'OR'           reduce using rule 20
	'THEN'         reduce using rule 20
	L_Id           reduce using rule 20


State 60

	Expr5 -> Expr6 .                                    (rule 27)
	Expr6 -> Expr6 . '*' Expr7                          (rule 31)
	Expr6 -> Expr6 . '/' Expr7                          (rule 32)

	')'            reduce using rule 27
	'*'            shift, and enter state 89
	'+'            reduce using rule 27
	','            reduce using rule 27
	'-'            reduce using rule 27
	'/'            shift, and enter state 90
	'/='           reduce using rule 27
	'<'            reduce using rule 27
	'<='           reduce using rule 27
	'='            reduce using rule 27
	'>'            reduce using rule 27
	'>='           reduce using rule 27
	'AND'          reduce using rule 27
	'ELSE'         reduce using rule 27
	'ELSIF'        reduce using rule 27
	'END'          reduce using rule 27
	'ENDIF'        reduce using rule 27
	'IN'           reduce using rule 27
	'OR'           reduce using rule 27
	'THEN'         reduce using rule 27
	L_Id           reduce using rule 27


State 61

	Expr6 -> Expr7 .                                    (rule 30)

	')'            reduce using rule 30
	'*'            reduce using rule 30
	'+'            reduce using rule 30
	','            reduce using rule 30
	'-'            reduce using rule 30
	'/'            reduce using rule 30
	'/='           reduce using rule 30
	'<'            reduce using rule 30
	'<='           reduce using rule 30
	'='            reduce using rule 30
	'>'            reduce using rule 30
	'>='           reduce using rule 30
	'AND'          reduce using rule 30
	'ELSE'         reduce using rule 30
	'ELSIF'        reduce using rule 30
	'END'          reduce using rule 30
	'ENDIF'        reduce using rule 30
	'IN'           reduce using rule 30
	'OR'           reduce using rule 30
	'THEN'         reduce using rule 30
	L_Id           reduce using rule 30


State 62

	Expr7 -> Expr8 .                                    (rule 33)

	')'            reduce using rule 33
	'*'            reduce using rule 33
	'+'            reduce using rule 33
	','            reduce using rule 33
	'-'            reduce using rule 33
	'/'            reduce using rule 33
	'/='           reduce using rule 33
	'<'            reduce using rule 33
	'<='           reduce using rule 33
	'='            reduce using rule 33
	'>'            reduce using rule 33
	'>='           reduce using rule 33
	'AND'          reduce using rule 33
	'ELSE'         reduce using rule 33
	'ELSIF'        reduce using rule 33
	'END'          reduce using rule 33
	'ENDIF'        reduce using rule 33
	'IN'           reduce using rule 33
	'OR'           reduce using rule 33
	'THEN'         reduce using rule 33
	L_Id           reduce using rule 33


State 63

	Expr8 -> Expr9 .                                    (rule 35)
	Expr8 -> Expr9 . '^' Expr8                          (rule 36)

	')'            reduce using rule 35
	'*'            reduce using rule 35
	'+'            reduce using rule 35
	','            reduce using rule 35
	'-'            reduce using rule 35
	'/'            reduce using rule 35
	'/='           reduce using rule 35
	'<'            reduce using rule 35
	'<='           reduce using rule 35
	'='            reduce using rule 35
	'>'            reduce using rule 35
	'>='           reduce using rule 35
	'AND'          reduce using rule 35
	'ELSE'         reduce using rule 35
	'ELSIF'        reduce using rule 35
	'END'          reduce using rule 35
	'ENDIF'        reduce using rule 35
	'IN'           reduce using rule 35
	'OR'           reduce using rule 35
	'THEN'         reduce using rule 35
	'^'            shift, and enter state 88
	L_Id           reduce using rule 35


State 64

	Expr9 -> Expr10 .                                   (rule 37)

	')'            reduce using rule 37
	'*'            reduce using rule 37
	'+'            reduce using rule 37
	','            reduce using rule 37
	'-'            reduce using rule 37
	'/'            reduce using rule 37
	'/='           reduce using rule 37
	'<'            reduce using rule 37
	'<='           reduce using rule 37
	'='            reduce using rule 37
	'>'            reduce using rule 37
	'>='           reduce using rule 37
	'AND'          reduce using rule 37
	'ELSE'         reduce using rule 37
	'ELSIF'        reduce using rule 37
	'END'          reduce using rule 37
	'ENDIF'        reduce using rule 37
	'IN'           reduce using rule 37
	'OR'           reduce using rule 37
	'THEN'         reduce using rule 37
	'^'            reduce using rule 37
	L_Id           reduce using rule 37


State 65

	Expr10 -> Expr11 .                                  (rule 41)

	')'            reduce using rule 41
	'*'            reduce using rule 41
	'+'            reduce using rule 41
	','            reduce using rule 41
	'-'            reduce using rule 41
	'/'            reduce using rule 41
	'/='           reduce using rule 41
	'<'            reduce using rule 41
	'<='           reduce using rule 41
	'='            reduce using rule 41
	'>'            reduce using rule 41
	'>='           reduce using rule 41
	'AND'          reduce using rule 41
	'ELSE'         reduce using rule 41
	'ELSIF'        reduce using rule 41
	'END'          reduce using rule 41
	'ENDIF'        reduce using rule 41
	'IN'           reduce using rule 41
	'OR'           reduce using rule 41
	'THEN'         reduce using rule 41
	'^'            reduce using rule 41
	L_Id           reduce using rule 41


State 66

	Expr11 -> '(' . Expr ')'                            (rule 46)

	'('            shift, and enter state 66
	'-'            shift, and enter state 67
	'IF'           shift, and enter state 68
	'LET'          shift, and enter state 69
	'NOT'          shift, and enter state 70
	'for'          shift, and enter state 71
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 5

	Integer        goto state 51
	Double         goto state 52
	Id             goto state 53
	Expr           goto state 87
	Expr1          goto state 55
	Expr2          goto state 56
	Expr3          goto state 57
	Expr4          goto state 58
	Expr5          goto state 59
	Expr6          goto state 60
	Expr7          goto state 61
	Expr8          goto state 62
	Expr9          goto state 63
	Expr10         goto state 64
	Expr11         goto state 65

State 67

	Expr7 -> '-' . Expr8                                (rule 34)

	'('            shift, and enter state 66
	'IF'           shift, and enter state 68
	'for'          shift, and enter state 71
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 5

	Integer        goto state 51
	Double         goto state 52
	Id             goto state 53
	Expr8          goto state 86
	Expr9          goto state 63
	Expr10         goto state 64
	Expr11         goto state 65

State 68

	Expr9 -> 'IF' . Expr 'THEN' Expr 'ELSE' Expr 'ENDIF'    (rule 38)
	Expr9 -> 'IF' . Expr 'THEN' Expr ListElsIf 'ELSE' Expr 'ENDIF'    (rule 39)

	'('            shift, and enter state 66
	'-'            shift, and enter state 67
	'IF'           shift, and enter state 68
	'LET'          shift, and enter state 69
	'NOT'          shift, and enter state 70
	'for'          shift, and enter state 71
	L_integ        shift, and enter state 2
	L_doubl        shift, and enter state 72
	L_Id           shift, and enter state 5
